# Scheduler

./: CMakeLists.txt  Dockerfile  Makefile  README.md
include/OS/: Process.hpp  Scheduler.hpp
include/Reader/: AST.hpp  Lexer.hpp  Parser.hpp  Reader.hpp  Token.hpp
src/: main.cpp
src/OS/: Process.cpp  Scheduler.cpp
src/Reader/: AST.cpp  Lexer.cpp  Parser.cpp  Reader.cpp  Token.cpp
test/: in.txt  in1.txt
